--- a/css/style.css
+++ b/css/style.css
@@ -1,243 +1,371 @@
-:root {
-    --black-color: #222222;
-    --pink-color: #F1E4E6;
-    --dark-pink-color: #F16D7F;
-    --gray-color: #F8F8F8;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 body {
-    font-family: Lato;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 17px;
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 17px;
 }
 
 .container {
-    width: 1140px;
-    margin: 0 auto;
+  width: 1140px;
+  margin: 0 auto;
 }
 
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    border: 0;
-    clip: rect(0 0 0 0);
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 .header {
-    background-color: var(--black-color);
+  background-color: #222222;
 }
 
 .header__navigation {
-    display: none;
+  display: none;
 }
 
 .header__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 75px;
 }
 
 .header__logo {
-    margin: 0 41px 0 0;
+  margin: 0 41px 0 0;
 }
 
 .header__button {
-    background: transparent;
-    border: none;
-    margin: 0 33px 0 0;
+  background: transparent;
+  border: none;
+  margin: 0 33px 0 0;
 }
 
 .header__link {
-    margin: 0 33px 0 0;
+  margin: 0 33px 0 0;
 }
 
 .brand {
-    max-width: 1600px;
-    margin: 0 auto;
-    display: flex;
-    margin: 0 0 63px;
+  max-width: 1600px;
+  margin: 0 auto;
+  display: flex;
+  margin: 0 0 63px;
 }
 
 .brand__title-container {
-    background: var(--pink-color);
-    flex-grow: 1;
-    padding: 0 0 0 92px;
-    display: flex;
-    align-items: center;
+  background: #F1E4E6 flex-grow 1;
+  padding: 0 0 0 92px;
+  display: flex;
+  align-items: center;
 }
 
 .brand__title {
-    font-size: 48px;
-    font-weight: 900;
-    line-height: 58px;
-    /* width: 377px; */
-    text-transform: uppercase;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 58px;
+  /* width: 377px; */
+  text-transform: uppercase;
 }
 
 .brand__sub-title {
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 38px;
-    display: block;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 38px;
+  display: block;
 }
 
-.brand__pink-sub-title {
-    color: var(--dark-pink-color);
-}
-
-.promotions__list {
-    margin: 0 0 63px;
+.brand-sub-title {
+  color: #F16D7F;
 }
 
 .promotions__list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  margin: 0 0 63px;
+}
+
+.promotions__title {
+  color: white;
+}
+
+.promotions__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .promotions__item {
-    width: 360px;
-    min-height: 260px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 0 30px;
+  width: 360px;
+  min-height: 260px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 30px;
 }
 
 .promotions__item--woman {
-    background-image: url("../img/promotions-woman.jpg");
-    background-size: cover;
+  background-image: url("../img/promotions-woman.jpg");
+  background-size: cover;
 }
 
 .promotions__item--man {
-    background-image: url("../img/promotions-man.jpg");
-    background-size: cover;
+  background-image: url("../img/promotions-man.jpg");
+  background-size: cover;
 }
 
 .promotions__item--kids {
-    background-image: url("../img/promotions-kids.jpg");
-    background-size: cover;
+  background-image: url("../img/promotions-kids.jpg");
+  background-size: cover;
 }
 
 .promotions__item--accesories {
-    background-image: url("../img/promotions-accesories.jpg");
-    background-size: cover;
-    width: 100%;
+  background-image: url("../img/promotions-accesories.jpg");
+  background-size: cover;
+  width: 100%;
 }
 
 .product__button {
-    display: none;
-}
-
-.products__list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.products__item {
-    width: 360px;
+  display: none;
 }
 
 .product__img {
-    display: block;
+  display: block;
 }
 
 .product__description {
-    background: var(--gray-color);
-    padding: 25px 29px 20px 17px;
+  background: #F8F8F8;
+  padding: 25px 29px 20px 17px;
+}
+
+.products__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.products__item {
+  width: 360px;
 }
 
 .widget {
-    background-color: var(--black-color);
-    height: 220px;
-    margin-top: 103px;
-    padding-top: 100px;
+  background-color: #222222;
+  height: 220px;
+  margin-top: 103px;
+  padding-top: 100px;
 }
 
 .widget__container {
-    display: flex;
-    justify-content: Space-around;
-
+  display: flex;
+  justify-content: Space-around;
 }
 
 .widget__item {
-    text-align: center;
-    color: #F1E4E6;
+  text-align: center;
+  color: #F1E4E6;
 }
 
 .foot__fetish {
-    Height: 448px;
-    display: flex;
-    background-image: url(../img/foot-fon2.jpg);
-    justify-content: space-around;
-    align-items: center;
+  Height: 448px;
+  display: flex;
+  background-image: url(../img/foot-fon2.jpg);
+  justify-content: space-around;
+  align-items: center;
 }
 
 .foot__down {
-    background-color: var(--black-color);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 75px;
-
+  background-color: #222222;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 75px;
 }
 
 .foot__info {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .foot__text {
-    color: white;
+  color: white;
 }
 
 .foot__li {
-    width: 25px;
-    height: 15px;
-    background-color: var(--gray-color);
-    margin: 5%;
-    padding: 5%;
+  width: 25px;
+  height: 15px;
+  background-color: #F8F8F8;
+  margin: 5%;
+  padding: 5%;
 }
 
 .head__reg {
-    padding-top: 50px;
-    padding-left: 200px;
-    width: 1050px;
-    height: 60px;
-    background-color: rgba(212, 207, 207, 0.527)
+  padding-top: 50px;
+  padding-left: 200px;
+  width: 1050px;
+  height: 60px;
+  background-color: rgba(212, 207, 207, 0.527);
 }
 
 .registration__head {
-    color: var(--dark-pink-color)
+  color: var(--dark-pink-color);
 }
 
 .container__reg {
-    display: flex;
-
+  display: flex;
 }
 
 label {
-    display: block;
+  display: block;
 }
 
 .body__reg {
-    padding-left: 10%;
-    margin-right: 10%;
+  padding-left: 10%;
+  margin-right: 10%;
 }
 
 li::before {
-    content: url(../img/Vector.svg);
-    padding-right: 7px;
+  content: url(../img/Vector.svg);
+  padding-right: 7px;
 }
 
 .reg__before {
-    margin: auto;
+  margin: auto;
 }
+/*# sourceMappingURL=style.css.map */
