--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body {
 }
 
 .container {
-  width: 1140px;
+  width: 71%;
   margin: 0 auto;
 }
 
@@ -154,6 +154,12 @@ body {
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+@media (max-width: 1600px) {
+  .container {
+    width: 96%;
+  }
 }
 
 .header {
@@ -185,18 +191,54 @@ body {
   margin: 0 33px 0 0;
 }
 
+@media (max-width: 1600px) {
+  .header {
+    padding: 0 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 0 16px;
+  }
+  .header__link {
+    display: none;
+  }
+  .header__link-opacity {
+    display: none;
+  }
+}
+
 .brand {
   max-width: 1600px;
-  margin: 0 auto;
   display: flex;
-  margin: 0 0 63px;
+  margin: 0 auto 63px auto;
+}
+
+@media (max-width: 768px) {
+  .brand {
+    min-height: 363px;
+  }
 }
 
 .brand__title-container {
-  background: #F1E4E6 flex-grow 1;
+  background: #F1E4E6;
+  flex-grow: 1;
   padding: 0 0 0 92px;
   display: flex;
   align-items: center;
+}
+
+@media (max-width: 1600px) {
+  .brand__title-container {
+    padding: 0 0 0 69px;
+  }
+}
+
+@media (max-width: 768px) {
+  .brand__title-container {
+    padding: 0 0 0 83px;
+  }
 }
 
 .brand__title {
@@ -207,6 +249,22 @@ body {
   text-transform: uppercase;
 }
 
+@media (max-width: 1600px) {
+  .brand__title {
+    font-size: 44px;
+    line-height: 52px;
+    font-weight: normal;
+  }
+}
+
+@media (max-width: 768px) {
+  .brand__title {
+    font-size: 38px;
+    line-height: 46px;
+    font-weight: normal;
+  }
+}
+
 .brand__sub-title {
   font-size: 32px;
   font-weight: 700;
@@ -214,8 +272,35 @@ body {
   display: block;
 }
 
+@media (max-width: 1600px) {
+  .brand__sub-title {
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: normal;
+  }
+}
+
+@media (max-width: 768px) {
+  .brand__sub-title {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: normal;
+  }
+}
+
 .brand-sub-title {
   color: #F16D7F;
+}
+
+.brand__img {
+  width: 50%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .brand__img {
+    display: none;
+  }
 }
 
 .promotions__list {
@@ -233,12 +318,28 @@ body {
 }
 
 .promotions__item {
-  width: 360px;
+  width: 31%;
   min-height: 260px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 0 30px;
+}
+
+@media (max-width: 1600px) {
+  .promotions__item {
+    width: 31%;
+    min-height: 168px;
+    margin: 0 0 19px;
+  }
+}
+
+@media (max-width: 768px) {
+  .promotions__item {
+    width: 100%;
+    min-height: 247px;
+    margin: 0 0 32px;
+  }
 }
 
 .promotions__item--woman {
@@ -262,6 +363,12 @@ body {
   width: 100%;
 }
 
+@media (max-width: 1600px) {
+  .promotions__item--accesories {
+    min-height: 116px;
+  }
+}
+
 .product__button {
   display: none;
 }
@@ -281,25 +388,47 @@ body {
   flex-wrap: wrap;
 }
 
+@media (max-width: 768px) {
+  .products__list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .products__item {
   width: 360px;
 }
 
+@media (max-width: 375px) {
+  .products__item {
+    width: 100%;
+  }
+}
+
 .widget {
-  background-color: #222222;
-  height: 220px;
-  margin-top: 103px;
-  padding-top: 100px;
+  max-width: 1500px;
 }
 
 .widget__container {
+  background-color: #222222;
+  max-height: 220px;
+  margin-top: 103px;
+  padding-top: 100px;
+  padding-bottom: 30px;
   display: flex;
-  justify-content: Space-around;
-}
-
-.widget__item {
+  justify-content: space-around;
   text-align: center;
   color: #F1E4E6;
+}
+
+@media (max-width: 768px) {
+  .widget__container {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    min-height: 247px;
+    margin: 0 0 32px;
+  }
 }
 
 .foot__fetish {
@@ -308,6 +437,16 @@ body {
   background-image: url(../img/foot-fon2.jpg);
   justify-content: space-around;
   align-items: center;
+}
+
+@media (max-width: 768px) {
+  .foot__fetish {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    min-height: 247px;
+    margin: 0 0 32px;
+  }
 }
 
 .foot__down {
@@ -360,12 +499,8 @@ label {
   margin-right: 10%;
 }
 
-li::before {
-  content: url(../img/Vector.svg);
-  padding-right: 7px;
-}
-
-.reg__before {
-  margin: auto;
+.loyalty_item::before {
+  content: url(/img/Vec.svg);
+  padding-right: 24px;
 }
 /*# sourceMappingURL=style.css.map */
