--- a/scss/blocks/_brand.scss
+++ b/scss/blocks/_brand.scss
@@ -1,14 +1,26 @@
 .brand {
     max-width: 1600px;
-    margin: 0 auto;
     display: flex;
-    margin: 0 0 63px;
+    margin: 0 auto 63px auto;
+
+    @include mobile {
+        min-height: 363px;
+    }
 
     &__title-container {
-        background: $pink-color flex-grow 1;
+        background: $pink-color;
+        flex-grow: 1;
         padding: 0 0 0 92px;
         display: flex;
         align-items: center;
+
+        @include tablet {
+            padding: 0 0 0 69px;
+        }
+
+        @include mobile {
+            padding: 0 0 0 83px;
+        }
     }
 
     &__title {
@@ -17,6 +29,14 @@
         line-height: 58px;
         /* width: 377px; */
         text-transform: uppercase;
+
+        @include tablet {
+            @include font(44px, 52px, normal)
+        }
+
+        @include mobile {
+            @include font(38px, 46px)
+        }
     }
 
     &__sub-title {
@@ -24,9 +44,26 @@
         font-weight: 700;
         line-height: 38px;
         display: block;
+
+        @include tablet {
+            @include font(24px, 29px)
+        }
+
+        @include mobile {
+            @include font (20px, 24px)
+        }
     }
 
     &-sub-title {
         color: $dark-pink-color;
+    }
+
+    &__img {
+        width: 50%;
+        height: auto;
+
+        @include mobile {
+            display: none;
+        }
     }
 }
