--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,35 +1,45 @@
 .foot {
-&__fetish {
-    Height: 448px;
-    display: flex;
-    background-image: url(../img/foot-fon2.jpg);
-    justify-content: space-around;
-    align-items: center;
-}
+    &__fetish {
+        Height: 448px;
+        display: flex;
+        background-image: url(../img/foot-fon2.jpg);
+        justify-content: space-around;
+        align-items: center;
 
-&__down {
-    background-color: $black-color;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 75px;
+        @include mobile {
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            min-height: 247px;
+            margin: 0 0 32px;
+        }
 
-}
 
-&__info {
-    display: flex;
-    justify-content: flex-end;
-}
+    }
 
-&__text {
-    color: white;
-}
+    &__down {
+        background-color: $black-color;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        min-height: 75px;
 
-&__li {
-    width: 25px;
-    height: 15px;
-    background-color: $gray-color;
-    margin: 5%;
-    padding: 5%;
-}
+    }
+
+    &__info {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    &__text {
+        color: white;
+    }
+
+    &__li {
+        width: 25px;
+        height: 15px;
+        background-color: $gray-color;
+        margin: 5%;
+        padding: 5%;
+    }
 }
