--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -1,11 +1,20 @@
 .products {
     &__list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        @include mobile {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__item {
-    width: 360px;
+        width: 360px;
+
+        @include min-mobile {
+            width: 100%;
+        }
     }
 }
