--- a/scss/blocks/_promotions.scss
+++ b/scss/blocks/_promotions.scss
@@ -15,12 +15,24 @@
     }
 
     &__item {
-        width: 360px;
+        width: 31%;
         min-height: 260px;
         display: flex;
         align-items: center;
         justify-content: center;
         margin: 0 0 30px;
+
+        @include tablet {
+            width: 31%;
+            min-height: 168px;
+            margin: 0 0 19px;
+        }
+
+        @include mobile {
+            width: 100%;
+            min-height: 247px;
+            margin: 0 0 32px;
+        }
     }
 
     &__item--woman {
@@ -42,5 +54,9 @@
         background-image: url("../img/promotions-accesories.jpg");
         background-size: cover;
         width: 100%;
+
+        @include tablet {
+            min-height: 116px;
+        }
     }
 }
