--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -43,3 +43,27 @@
         padding: 5%;
     }
 }
+
+.subscribe__send {
+    width: 323px;
+    height: 49px;
+    background-color: #E1E1E1;
+    padding: 7px 64px 6px 22px;
+    border-style: none;
+    outline: none;
+    border-radius: 25px 0 0 25px;
+}
+
+.subscribe__button {
+    width: 100px;
+    height: 62px;
+    margin-left: -20px;
+    font-size: 14px;
+    font-weight: 400;
+    border-style: none;
+    outline: none;
+    padding: 7px 7px 6px 8px;
+    color: #FFFFFF;
+    background-color: #F16D7F;
+    border-radius: 0 25px 25px 0;
+}
