--- a/scss/blocks/_registration.scss
+++ b/scss/blocks/_registration.scss
@@ -19,12 +19,70 @@ label {
     display: block;
 }
 
+.input__ind {
+    display: flex;
+}
+
 .body__reg {
     padding-left: 10%;
     margin-right: 10%;
 }
 
-.loyalty_item::before {
+.form__field {
+    width: 36%;
+    height: 44px;
+    top: 327px;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 16px;
+    text-align: left;
+    color: #B1B1B1;
+    padding: 13px 274px 16px 17px;
+    margin-bottom: 21px;
+}
+
+.form__link {
+    width: 167px;
+    height: 50px;
+    color: white;
+    background-color: #F16D7F;
+    text-transform: uppercase;
+    padding: 16px 66px 17px 29px;
+    text-decoration: none;
+
+}
+
+.form__text {
+    width: 359px;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 300;
+    text-align: left;
+    color: #B1B1B1;
+    margin-top: 16px;
+    margin-bottom: 39px;
+}
+
+.form__title {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 300;
+    text-align: left;
+    color: #222222;
+    margin-bottom: 21px;
+}
+
+.loyalty {
+    position: relative;
+}
+
+.reg__before {
+    position: relative
+}
+
+.loyalty__item::before {
     content: url(/img/Vec.svg);
+    position: absolute;
+    display: inline-block;
     padding-right: 24px;
 }
