--- a/scss/blocks/_brand.scss
+++ b/scss/blocks/_brand.scss
@@ -58,6 +58,10 @@
         color: $dark-pink-color;
     }
 
+    .brand__pink-sub-title {
+        color: $dark-pink-color;
+    }
+
     &__img {
         width: 50%;
         height: auto;
