--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -17,4 +17,10 @@
             width: 100%;
         }
     }
+
+    &__description {
+        text-align: center;
+        margin-top: 96px;
+        margin-bottom: 48px;
+    }
 }
