--- a/css/style.css
+++ b/css/style.css
@@ -613,20 +613,19 @@ label {
 }
 
 .loyalty {
-  margin-left: 3%;
+  list-style-type: none;
 }
 
 .loyalty__item {
   position: relative;
+  margin-left: 20px;
 }
 
-.loyalty__item:before {
-  content: "";
-  position: absolute;
-  background-image: url(/img/vect.png);
+.loyalty__item::before {
+  content: "\2714";
   width: 20px;
   height: 20px;
-  left: -22px;
-  background-color: yellow;
+  position: absolute;
+  left: -20px;
 }
 /*# sourceMappingURL=style.css.map */
